--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,13 @@
     {% include header.html headerClass='header-extra' %}
     {{content}}
   </div>
+  <button
+          type="button"
+          class="btn btn-danger btn-floating btn-lg"
+          id="btn-back-to-top"
+          >
+    <i class="fas fa-arrow-up"></i>
+  </button>
   {% include footer.html %}
   {% include sub-footer.html %}
   <script type="text/javascript" src="{{ "/assets/js/scripts.js" | relative_url }}"></script>
