--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,7 +3,7 @@
 ---
 
 // Colors
-$primary: #E5261F;
+$primary: #d40000;
 $secondary: #f88379;
 $black: #2f2f41;
 $white: #ffffff;
@@ -69,4 +69,11 @@ body {
     font-size: 16px;
     line-height: 1.3;
   }
+}
+
+#btn-back-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
 }
