--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -14,4 +14,74 @@ bodyClass: "page-contact"
             </div>
         </div>
     </div>
+
+    <div class="col-xl-8 offset-xl-2">
+
+                    <h2>¡Estemos en contacto!</h2>
+
+                    <form id="contact-form" method="POST" action="https://getform.io/f/1d16de2b-69b8-49de-839d-1cba9f4ea03e" role="form">
+
+                        <div class="messages"></div>
+
+                        <div class="controls">
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <label for="form_name">Nombre *</label>
+                                        <input id="form_name" type="text" name="name" class="form-control" placeholder="Nombre *" required="required"
+                                            data-error="Es necesario este campo.">
+                                        <div class="help-block with-errors"></div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <label for="form_lastname">Apellidos *</label>
+                                        <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Apellidos *" required="required"
+                                            data-error="Es necesario este campo.">
+                                        <div class="help-block with-errors"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <label for="form_email">Email *</label>
+                                        <input id="form_email" type="email" name="email" class="form-control" placeholder="Email *" required="required"
+                                            data-error="Es necesario este campo.">
+                                        <div class="help-block with-errors"></div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <label for="form_phone">Teléfono</label>
+                                        <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Teléfono">
+                                        <div class="help-block with-errors"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="form_message">Mensaje *</label>
+                                <textarea id="form_message" name="message" class="form-control" placeholder="Mensaje *" rows="4" required="required"
+                                    data-error="Por favor, escribe tu mensaje."></textarea>
+                                <div class="help-block with-errors"></div>
+                            </div>
+
+
+                            <div class="form-group">
+                                <div class="g-recaptcha" data-sitekey="6Le1GKgUAAAAAMhbKcscbLwxLljRLfWVY3r2ZTXn" data-callback="verifyRecaptchaCallback"></div>
+                            </div>
+
+
+                            <input type="submit" class="btn btn-success btn-send" value="Enviar">
+
+                            <p class="text-muted">
+                                <strong>*</strong> Campos obligatorios.
+                            </p>
+
+                        </div>
+
+                    </form>
+
+                </div>
+
 </div>
