se agrega captcha

--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -65,15 +65,8 @@ bodyClass: "page-contact"
                                     data-error="Por favor, escribe tu mensaje."></textarea>
                                 <div class="help-block with-errors"></div>
                             </div>
-
-
-                            <div class="form-group">
-                                <div class="g-recaptcha" data-sitekey="6Le1GKgUAAAAAMhbKcscbLwxLljRLfWVY3r2ZTXn" data-callback="verifyRecaptchaCallback"></div>
-                            </div>
-
-
                             <input type="submit" class="btn btn-success btn-send" value="Enviar">
-
+<div class="g-recaptcha" data-sitekey="6LdzTWAUAAAAAFfmOfTfoOn1nepYfW89K9L8W-Q_"></div>
                             <p class="text-muted">
                                 <strong>*</strong> Campos obligatorios.
                             </p>
