otras cosas epub

--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -88,7 +88,7 @@ bodyClass: "page-contact"
                 </div>
 
                 <!-- libro -->
-
+<script src="https://cdn.jsdelivr.net/npm/epubjs/dist/epub.min.js"></script>
                 <script>
    var book = ePub("/epubs/Bataille.epub");
    var rendition = book.renderTo("area", {
