--- a/_layouts/boutique.html
+++ b/_layouts/boutique.html
@@ -4,15 +4,15 @@ bodyClass: "page-contact"
 ---
 
 <!-- libro -->
-    <div id="reader-wrap">
-      <h3>Bataille, George. <em>Lo angélico y otros poemas</em>.</h3>
-      <div id="prev" onclick="rendition.prev();" class="arrow">‹</div>
-      <div id="reader">
-        <div id="area"></div>
-      </div>
-      <div id="next" onclick="rendition.next();"class="arrow">›</div>
+  <div id="reader-wrap">
+    <h3>Bataille, George. <em>Lo angélico y otros poemas</em>.</h3>
+    <div id="prev" onclick="rendition.prev();" class="arrow">‹</div>
+    <div id="reader">
+      <div id="area"></div>
     </div>
-<!-- libro -->
+    <div id="next" onclick="rendition.next();"class="arrow">›</div>
+  </div>
+
 
 <script src="https://cdn.jsdelivr.net/npm/epubjs/dist/epub.min.js"></script>
                 <script>
@@ -22,4 +22,18 @@ bodyClass: "page-contact"
      height: 640
    });
    rendition.display();
+</script>
+
+<!-- libro -->
+
+<!-- PDF -->
+  <div id="reader-wrap">
+    <div id="readerpdf">
+      <div id="librin"></div>
+    </div>
+  </div>
+<script src="https://unpkg.com/pdfobject@2.2.6/pdfobject.min.js"></script>
+<script>
+var container = document.querySelector("#librin");
+PDFObject.embed("/PDF/ciudades.pdf", container);
 </script>
