--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -130,3 +130,25 @@ body {
   height:600px;
   margin:0 auto;
 }
+
+.pdfobject-container {
+    max-width: 100%;
+	width: 600px;
+	height: 600px;
+	border: 10px solid rgba(0,0,0,.2);
+	margin: 0;
+}
+
+#readerpdf {
+  width:650px;
+  height:640px;
+  overflow:hidden;
+  border:1px solid #ccc;
+  margin:20px auto;
+  padding:20px 20px;
+  background:#fff;
+  border-radius:0 5px 5px 0;
+  -moz-box-shadow:inset 10px 0 20px rgba(0,0,0,0.1);
+  -webkit-box-shadow:inset 10px 0 20px rgba(0,0,0,0.1);
+  box-shadow:inset 10px 0 20px rgba(0,0,0,0.1);
+}
