--- a/_layouts/boutique.html
+++ b/_layouts/boutique.html
@@ -13,7 +13,7 @@ bodyClass: "page-contact"
     <div id="next" onclick="rendition.next();"class="arrow">›</div>
   </div>
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.5/jszip.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/epubjs/dist/epub.min.js"></script>
                 <script>
    var book = ePub("/epubs/Bataille.epub");
