se hacen cambios

--- a/_layouts/boutique.html
+++ b/_layouts/boutique.html
@@ -3,6 +3,7 @@ layout: default
 bodyClass: "page-contact"
 ---
 
+<div class="container-fluid">
 <!-- libro -->
   <div id="reader-wrap">
     <h3>Bataille, George. <em>Lo angélico y otros poemas</em>.</h3>
@@ -37,3 +38,4 @@ bodyClass: "page-contact"
 var container = document.querySelector("#librin");
 PDFObject.embed("/PDF/ciudades.pdf", container);
 </script>
+</div>
