--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -19,6 +19,8 @@ bodyClass: "page-contact"
 
                     <h2>¡Estemos en contacto!</h2>
 
+                    <p>No dudes en hacernos llegar tus dudas y comentarios.</p>
+
                     <form id="contact-form" method="POST" action="https://getform.io/f/1d16de2b-69b8-49de-839d-1cba9f4ea03e" role="form">
 
                         <div class="messages"></div>
@@ -65,8 +67,8 @@ bodyClass: "page-contact"
                                     data-error="Por favor, escribe tu mensaje."></textarea>
                                 <div class="help-block with-errors"></div>
                             </div>
+                            <div class="g-recaptcha" data-sitekey="6LdzTWAUAAAAAFfmOfTfoOn1nepYfW89K9L8W-Q_"></div>
                             <input type="submit" class="btn btn-success btn-send" value="Enviar">
-<div class="g-recaptcha" data-sitekey="6LdzTWAUAAAAAFfmOfTfoOn1nepYfW89K9L8W-Q_"></div>
                             <p class="text-muted">
                                 <strong>*</strong> Campos obligatorios.
                             </p>
