--- a/_sass/components/_intro-image.scss
+++ b/_sass/components/_intro-image.scss
@@ -1,11 +1,11 @@
 .intro-image {
   width: 100%;
   height: auto;
-  margin-top: -40px;
+  margin-top: -20px;
+  margin-right: 80px;
 }
 .intro-image-absolute {
   max-width: none;
-
   padding: 0;
   margin-bottom: 30px;
   @include media-breakpoint-up(sm) {
