--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,5 +33,12 @@
   {% include sub-footer.html %}
   <script type="text/javascript" src="{{ "/assets/js/scripts.js" | relative_url }}"></script>
   {% include google-analytics.html %}
+
+  <script src="https://unpkg.com/vanilla-back-to-top@7.2.1/dist/vanilla-back-to-top.min.js"></script>
+  <script>addBackToTop({
+    diameter: 56,
+    backgroundColor: 'rgb(255, 0, 0)',
+    textColor: '#fff'
+  })</script>
 </body>
 </html>
