--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,14 +1,10 @@
-{% if jekyll.environment == "production" %}
-    {% assign gid = site.env.NETLIFY_GOOGLE_ANALYTICS_ID %}
-    {% if gid %}
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3E1Q0QP7EG"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
 
-      gtag('config', '{{ site.data.seo.google_analytics_id }}');
-    </script>
-    {% endif %}
-{% endif %}
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.data.seo.google_analytics_id }}"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', '{{ site.data.seo.google_analytics_id }}');
+</script>
