--- a/_includes/call.html
+++ b/_includes/call.html
@@ -14,7 +14,7 @@
     {% if include.show_button %}
       <div class="call-box-bottom">
         <!-- <a href="{{ site.data.contact.contact_button_link }}" class="button">Contacto</a> -->
-        <a href="{{ site.data.contact.whatsapp }}" class="button" target="_blank"><img src="/images/social/whatsapp.svg" width="30px" alt=""> Whatsapp</a>
+        <a href="{{ site.data.contact.whatsapp }}" class="button" target="_blank"><img src="/images/social/whatsapp.svg" width="30px" height=" " alt=""> Whatsapp</a>
       </div>
     {% endif %}
 </div>
